test/spec_vectors/table_grow/ok/module_1.wat
(module (table $t 16 funcref) (elem declare func $f) (func $f (export "grow") (result i32) (table.grow $t (ref.func $f) (i32.const 4294967280))))